# spirit

./: CMakeLists.txt  README.md
assimp/port/jassimp/jassimp/src/jassimp/: AiNode.java  AiScene.java
glew-2.1.0/: glew.pc
res/: cube_textured.fbx  fragment_shader1.frag  fragment_shader_hud.frag  fragment_shader_menu.frag  vertex_shader1.vert  vertex_shader_hud.vert  vertex_shader_menu.vert
src/: Controller.cpp  Controller.h  Drawable.cpp  Drawable.h  DrawableStatic.cpp  DrawableStatic.h  FPSState.cpp  FPSState.h  FirstPerson.cpp  FirstPerson.h  Game.cpp  Game.h  GameState.cpp  GameState.h  HUD.cpp  HUD.h  MenuState.cpp  MenuState.h  Mesh.cpp  Mesh.h  Renderable3D.cpp  Renderable3D.h  SceneImporter.cpp  SceneImporter.h  Shader.cpp  Shader.h  Text.cpp  Text.h  Texture.cpp  Texture.h  VertecSpec.h  main.cpp
stb/: stb_image.cpp
